# LStein

./: .gitignore  .readthedocs.yaml  CITATION.cff  Project.toml  README.md  README_.md  compile_module.jl  compile_module.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yaml  runtest.yaml
LStein/: LSteinCanvas.py  LSteinPanel.py  LStein_demo_minimal.ipynb  utils.py
LStein_demo/: LStein_comparison.py  LStein_demo.ipynb  LStein_demo_colab.ipynb  LStein_demo_minimal.ipynb  LStein_logo.py  LStein_poster.py  LStein_talk.py
data/: 00001_rrab_ogle.csv  00015_rrc_ogle.csv  0019_cepheid_elasticc.csv  0186_snib_elasticc.csv  02202_rrd_ogle.csv  0246_snic_elasticc.csv  0357_rrl_elasticc.csv  0901_snii_elasticc.csv  11370314_snib_des.csv  114645810_snibc_elasticc.csv  11500415_sniin_des.csv  1189_snia_elasticc.csv  120712717_snibc_elasticc.csv  122276966_snibc_elasticc.csv  124266324_snii_elasticc.csv  132358631_snii_elasticc.csv  13686088_snia_des.csv  1419_eb_elasticc.csv  15108182_snic_des.csv  18213902_sniip_des.csv  1853138_sniil2_des.csv  2025_tde_elasticc.csv  21794560_snib_des.csv  21951066_sniil2_des.csv  22502500_sniil1_des.csv  2723412_sniin_des.csv  28191381_sniil1_des.csv  29216742_sniil2_des.csv  29508760_snic_des.csv  30365194_sniip_des.csv  31969503_snia_des.csv  33473486_sniil1_des.csv  3787399_snia_des.csv  60158_snic_des.csv  7137946_sniip_des.csv  72147108_snii_elasticc.csv  8777682_sniin_des.csv  9635893_snib_des.csv  auto_encoder_hypsearch.ipynb  autoencoder_hypsearch.csv  (+5 more)
data/Pessi2023_SN2017cfo_spectra/: 2017cfo_2017-03-26_04-32-02.082_ESO-NTT_EFOSC2-NTT_None.ascii  2017cfo_2017-03-27_11-46-49.027_FTS_FLOYDS-S_None.ascii  2017cfo_2017-03-31_11-30-22.485_FTS_FLOYDS-S_None.ascii  2017cfo_2017-04-04_07-47-43.252_FTN_FLOYDS-N_None.ascii  2017cfo_2017-04-12_10-45-00.008_FTS_FLOYDS-S_None.ascii  2017cfo_2017-04-16_02-34-26.234_ESO-NTT_EFOSC2-NTT_None.ascii  2017cfo_2017-04-16_10-33-15.047_FTS_FLOYDS-S_None.ascii  2017cfo_2017-04-27_08-56-05.065_FTN_FLOYDS-N_None.ascii  2017cfo_2017-04-28_02-24-27.038_ESO-NTT_EFOSC2-NTT_None.ascii  2017cfo_2017-05-06_08-39-32.981_FTN_FLOYDS-N_None.ascii  2017cfo_2017-05-31_23-25-25.391_ESO-NTT_EFOSC2-NTT_None.ascii  2017cfo_2017-06-01_00-17-35.309_ESO-NTT_EFOSC2-NTT_None.ascii  wiserep_spectra.csv
data/fink_lsst_alerts/: 170107660764446767.json  313998569623257167.json  314003014107006318.json
data/pulsar_data/: J0437-4715_2021-02-03.npz  J1804-2858_2024-03-19.npz  J2145-0750_2023-03-07.npz  J2145-0750_2023-03-30.npz
demo/: LStein_comparison.py  LStein_demo.ipynb  LStein_demo_colab.ipynb  LStein_logo.py  LStein_paper.py  LStein_website.py  axis_inversions.ipynb  axis_scales.ipynb  customizing_LSteinCanvas.ipynb  customizing_LSteinPanel.ipynb  projection_methods.ipynb  quickstart.ipynb  quickstart_demo.ipynb
docs/: conf.py  index.md  index.rst  index_.rst
docs/_static/: custom.css
docs/_static/_notebooks/: quickstart.html
docs/_templates/autosummary/: base.rst
docs/archive/: tutorials.rst
docs/assets/: quickstart.ipynb
docs/pages/: README.md  api_reference.md  canvas.rst  lstein_canvas.rst  lstein_panel.rst  quickstart.rst  tutorials.md  tutorials.rst
docs/pages/api/: reference.rst
docs/pages/api_reference/: lstein_canvas.rst  lstein_panel.rst
gfx/: lstein_website_snii_elasticc.json
paper/: LStein.tex
publications/: LStein_comparison.py  LStein_paper.py  LStein_presentations.py
report/: bib-refs.bib
src/: LVisP.jl
src/lstein/: LSteinCanvas.py  LSteinPanel.py  __init__.py  lstein.py  makedata.py  paper_plots.py  utils.py
src/lstein/backends/: __init__.py  matplotlib.py  plotly.py
src/lstein/base/: LSteinCanvas.py  LSteinPanel.py  __init__.py
src_jl/: LVisP.jl
src_jl_demo/: LVisP_comparison.jl  LVisP_demo.ipynb  LVisP_demo.jl
src_jl_tests/: LVisP_test.jl  runtests.jl
src_py/: LSteinCanvas.py  LSteinPanel.py  LVisP.py  LVisPCanvas.py  LVisPPanel.py  makedata.py  utils.py
src_py_demo/: LStein_comparison.py  LStein_demo.ipynb  LVisP_comparison.py  LVisP_demo.ipynb
test/: utils_test.py
test/base/: LSteinPanel_test.py
tests/: import_test.py
tests/base/: LSteinCanvas_test.py
