[project]
name = "LStein"
description = "Linking Series to envision information neatly. Visualisazion by projecting 2.5D onto 2D."
authors = [
    {name = "Lukas Steinwender"}
]
maintainers = [
    {name = "Lukas Steinwender"}
]
requires-python = ">=3.11"
dynamic = [ "readme", "classifiers" , "version", ]           #set stuff dynamically
license = {file = "LICENSE"}
dependencies = [
    "matplotlib (==3.10.3)",
    "numpy (==2.2.6)",
]
keywords = [ "visualization", "projection", ]

[project.urls]
Homepage = "https://github.com/TheRedElement/LStein"
Repository = "https://github.com/TheRedElement/LStein"
Issues = "https://github.com/TheRedElement/LStein/issues"

[project.scripts]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [ "src_py_tests",]

[tool.poetry]
packages = [
    {include = "LStein", from = "."}
]
readme = [
    "README.md",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
version = "0.1"                                             #base version #sets version dynamically via `poetry build --local-version`

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
polars = "^1.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
