[project]
name = "LStein"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Lukas Steinwender"}
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "plotly>=6.4.0",
]
maintainers = [
    {name = "Lukas Steinwender"}
]
license = {file = "LICENSE"}
keywords = [ "visualization", "projection", ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "brian2>=2.9.0",
    "ipykernel>=6.30.1",
    "lustcodesnippets-py",
    "nbformat>=5.10.4",
    "polars>=1.32.3",
]
docs = [
    "myst-nb>=1.3.0",
    "myst-parser>=5.0.0",
    "nbsphinx>=0.9.8",
    "sphinx>=9.0.4",
    "sphinx-copybutton>=0.5.2",
]
paper = [
    "lustcodesnippets-py",
    "pandas>=2.3.3",
]


[tool.uv.sources]
lustcodesnippets-py = { git = "https://github.com/TheRedElement/LuStCodeSnippets.git" }

#custom stuff
[project.urls]
Homepage = "https://github.com/TheRedElement/LStein"
Repository = "https://github.com/TheRedElement/LStein"
Issues = "https://github.com/TheRedElement/LStein/issues"

[project.scripts]
